# flea

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/api/: __init__.py  auth.py  places.py
app/core/: typess.py
app/dependencies/: auth.py
app/filters/: places.py
app/middlewares/: process_time.py
app/models/: __init__.py  category.py  item.py  item_file.py  m2m.py  place.py  place_file.py  session.py  tag.py  unit.py  user.py
app/schemas/: auth.py  item.py  place.py
app/services/: auth.py  items.py  places.py
app/utils/: file_streamer.py
migrations/: env.py
migrations/versions/: 26b77e774fe3_init.py  378f83ce8b8f_init.py  cbc65d0bc632_init.py
tests/: conftest.py  pytest.ini  test.env
